# zinc

zandbox/: Cargo.toml
zandbox/src/controller/contract/call/: mod.rs
zandbox/src/controller/contract/fee/: mod.rs
zandbox/src/controller/contract/initialize/: mod.rs
zandbox/src/controller/contract/post/: mod.rs
zandbox/src/controller/contract/query/: mod.rs
zandbox/src/key_changer/: main.rs
zandbox/src/zandbox/: main.rs
zargo/: Cargo.toml
zargo/src/: main.rs  network.rs
zargo/src/arguments/command/call/: mod.rs
zargo/src/transaction/: mod.rs
zinc-compiler/src/semantic/scope/: intrinsic.rs
zinc-const/src/: contract.rs
zinc-source/: Cargo.toml
zinc-tester/src/runners/: evaluation.rs  proof_check.rs
zinc-vm/src/core/contract/: facade.rs  input.rs  mod.rs  synthesizer.rs
zinc-vm/src/zvm/arguments/command/: prove.rs  run.rs
zinc-zksync/: Cargo.toml
zinc-zksync/src/request/: call.rs  fee.rs
