[package]
name = "zargo"
version = "0.2.0"
authors = [
    "Alex Zarudnyy <a.zarudnyy@matterlabs.dev>",
]
edition = "2018"
description = "The Zinc package manager"

[[bin]]
name = "zargo"
path = "src/main.rs"

[dependencies]
log = "0.4"
structopt = "0.3"

failure = "0.1"
anyhow = "1.0"
colored = "2.0"

serde = "1.0"
serde_json = "1.0"
num = "0.3"
rustc-hex = "2.1"
toml = "0.5"
Inflector = "0.11"

tokio = { version = "0.2", features = [ "full" ] }
reqwest = "0.10"

zksync = { git = "https://github.com/vikkkko/zksync.git"}
zksync_types = { git = "https://github.com/vikkkko/zksync.git"}
zksync_eth_signer = { git = "https://github.com/vikkkko/zksync.git"}
num_old = { package = "num", version = "0.2.1" }

zinc-logger = { path = "../zinc-logger" }
zinc-manifest = { path = "../zinc-manifest" }
zinc-const = { path = "../zinc-const" }
zinc-math = { path = "../zinc-math" }
zinc-zksync = { path = "../zinc-zksync" }
